# LLM-VLM-in-Jetson

./: .gitignore  Llama32_GPTQ_Phase1_v2.pptx  README.md  _make_slide4.py
FOEM/: usage.md
compression/: README.md
docs/: quantization_method_selection.md
docs/guides/: shortgpt-depth-pruning.md
experiment/: NOTE.md  slurm_script.sh
gptq/: .env.example  .gitignore  Llama32_GPTQ_Phase1.pptx  README.md  requirements.txt  slide4_GPTQ_selection.pptx
gptq/configs/: gptq_config.yaml
gptq/src/: benchmark.py  (+9 more)
llm-streamline/: README.md  args.py  benchmark.py  replace_and_retrain.py  requirements.txt  search_pruning_layer.py  slurm_script_benchmark.sh  slurm_script_replace_and_retrain.sh  slurm_script_search_pruning_layer.sh
qwen3-awq/: AWQ_USAGE.md  DESIGN_NOTES.md  requirements.txt  run_awq.py
shortgpt/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
shortgpt/configs/: prune_phi4.yaml
shortgpt/docs/: shortgpt-depth-pruning.md
shortgpt/scripts/: eval_compare.py  run_depth_prune.py  run_prune.py
shortgpt/src/common/: eval_kmmlu.py  param_stats.py
shortgpt/src/prune/: calibration.py  depth_prune.py  importance.py  report.py  run_helpers.py  structured_prune.py
shortgpt/tests/: conftest.py
shortgpt/tests/common/: test_eval_kmmlu.py  test_model_loader.py  test_param_stats.py
shortgpt/tests/prune/: test_calibration.py  test_depth_prune.py  test_importance.py  test_report.py  test_run_prune.py  test_structured_prune.py
src/: benchmark.py  eval_kdtcbench.py  eval_ppl.py  make_ppt.py  make_report.py  prune_depth_sweep.py  quantize.py
(+40 files in other folders)
